# data-designer-declarative-columns

./: .gitignore  README.md  pyproject.toml  test_plugin.py
examples/: README.md  basic_mcp.yaml  multi_turn_chat.yaml  pdf_qa.yaml  product_info_qa.yaml  product_reviews.yaml  text_to_python.yaml  text_to_sql.yaml
src/data_designer_declarative_columns/: __init__.py  config.py
